<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/food_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/seekFood"
            android:max="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/seekService"
            android:max="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/ambiance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/seekDecor"
            android:max="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/overall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/seekOverall"
            android:max="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextReview"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:drawable/editbox_background_normal"
            android:gravity="top"
            android:hint="@string/write_your_review_here"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonSubmitReview"
            android:text="@string/submit_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:filterTouchesWhenObscured="true"/>
    </LinearLayout>
</ScrollView>
